Implement the onboarding wizard

--- a/app/views/onboardings/show.html.erb
+++ b/app/views/onboardings/show.html.erb
@@ -1,41 +1,3 @@
-<% content_for :title, "Welcome to Feeder" %>
-<% content_for :skip_navigation, true %>
-<% content_for :body_class, "bg-light" %>
-
-<div class="row justify-content-center">
-  <div class="col-lg-8">
-    <div class="card shadow-sm">
-      <div class="card-body p-5">
-        <h1 class="card-title mb-4">Welcome to Feeder</h1>
-
-        <p class="lead mb-4">
-          Feeder automatically reposts content from RSS, Atom, and other sources to your FreeFeed groups.
-        </p>
-
-        <p class="mb-4">
-          To get things running, you'll need to:
-        </p>
-
-        <ul class="mb-4">
-          <li>Connect your FreeFeed account with an API token</li>
-          <li>Add a feed to monitor</li>
-          <li>Pick which FreeFeed groups to post to</li>
-          <li>Choose how often to check for new content</li>
-        </ul>
-
-        <p class="mb-4">
-          No need to remember, we'll walk you through.
-        </p>
-
-        <p class="mb-4">
-          But if you'd rather explore on your own, skip ahead and set up things up manually. You can always restrat the onboarding later.
-        </p>
-
-        <div class="d-flex flex-column flex-sm-row gap-3 mt-5">
-          <%= button_to "Get started", onboarding_path, method: :delete, params: { next_step: true }, class: "btn btn-primary" %>
-          <%= button_to "Skip that, I'm HARDCORE", onboarding_path, method: :delete, class: "btn btn-outline-secondary" %>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render "onboardings/wizard_layout" do %>
+  <%= render "onboardings/steps/#{@onboarding.current_step}" %>
+<% end %>
