--- a/app/views/onboarding/access_tokens/_form.html.erb
+++ b/app/views/onboarding/access_tokens/_form.html.erb
@@ -3,7 +3,7 @@
   token ||= ""
 %>
 
-<%= form_with url: onboarding_access_token_path, method: :post, data: { controller: "token-host", turbo_frame: "_top" } do |form| %>
+<%= form_with url: onboarding_access_token_path, method: :post, data: { controller: "token-host", token_host_token_url_value: "{host}/settings/app-tokens/create?scopes=read-my-info%20manage-posts", turbo_frame: "_top" } do |form| %>
   <%= form.hidden_field :subcommand, value: "validate" %>
   <div class="mb-3">
     <%= form.label :host, "FreeFeed Instance", class: "form-label" %>
