--- a/app/views/onboarding/access_tokens/show.html.erb
+++ b/app/views/onboarding/access_tokens/show.html.erb
@@ -14,7 +14,7 @@
         </p>
 
         <div id="token-form-container">
-          <%= render "form", host: @host, token: @token, validation_error: nil %>
+          <%= render "form" %>
         </div>
       </div>
     </div>
