--- a/app/views/onboarding/access_tokens/_form.html.erb
+++ b/app/views/onboarding/access_tokens/_form.html.erb
@@ -1,28 +1,29 @@
 <%
-  host ||= AccessToken::FREEFEED_HOSTS["production"]
+  host ||= AccessToken::FREEFEED_HOSTS["production"][:url]
   token ||= ""
+  host_config = AccessToken::FREEFEED_HOSTS.values.find { |h| h[:url] == host } || AccessToken::FREEFEED_HOSTS["production"]
 %>
 
-<%= form_with url: onboarding_access_token_path, method: :post, data: { controller: "token-host", token_host_token_url_value: "{host}/settings/app-tokens/create?scopes=read-my-info%20manage-posts", turbo_frame: "_top" } do |form| %>
+<%= form_with url: onboarding_access_token_path, method: :post, data: { controller: "token-host", turbo_frame: "_top" } do |form| %>
   <%= form.hidden_field :subcommand, value: "validate" %>
   <div class="mb-3">
     <%= form.label :host, "FreeFeed Instance", class: "form-label" %>
     <%= form.select :host,
-      options_for_select([
-        ["freefeed.net (main)", AccessToken::FREEFEED_HOSTS["production"]],
-        ["candy.freefeed.net (staging)", AccessToken::FREEFEED_HOSTS["staging"]],
-        ["beta.freefeed.net (beta)", AccessToken::FREEFEED_HOSTS["beta"]]
-      ], host),
+      options_for_select(AccessToken.host_options_for_select, host),
       {},
       class: "form-select",
-      data: { token_host_target: "hostSelect", action: "change->token-host#updateLink" } %>
+      data: {
+        token_host_target: "hostSelect",
+        action: "change->token-host#updateLink",
+        token_host_hosts_value: AccessToken::FREEFEED_HOSTS.to_json
+      } %>
   </div>
 
   <div class="mb-3">
     <%= form.label :token, "API Token", class: "form-label" %>
     <%= form.text_field :token, value: token, class: "form-control", autofocus: true, required: true %>
     <div class="form-text" data-token-host-target="helpText">
-      Don't have a token? You may create a new one at <%= link_to host.sub("https://", ""), "#{host}/settings/app-tokens/create?scopes=read-my-info%20manage-posts", target: "_blank", data: { token_host_target: "link" } %>.
+      Don't have a token? You may create a new one at <%= link_to host_config[:domain], host_config[:token_url], target: "_blank", data: { token_host_target: "link" } %>.
     </div>
   </div>
 
