--- a/app/views/onboarding/access_tokens/_token_details.html.erb
+++ b/app/views/onboarding/access_tokens/_token_details.html.erb
@@ -9,6 +9,7 @@
   <%= form.hidden_field :subcommand, value: "save" %>
   <%= form.hidden_field :host, value: host %>
   <%= form.hidden_field :token, value: token %>
+  <%= form.hidden_field :owner, value: user_info[:username] %>
 
   <div class="mb-3">
     <%= form.label :host, "FreeFeed Instance", class: "form-label" %>
