--- a/app/views/onboarding/access_tokens/_form.html.erb
+++ b/app/views/onboarding/access_tokens/_form.html.erb
@@ -7,7 +7,7 @@
 
 <%= form_with url: onboarding_validation_path, method: :post, data: { controller: "token-host", turbo_frame: "_top" } do |form| %>
   <div class="mb-3">
-    <%= form.label :host, "FreeFeed Instance", class: "form-label" %>
+    <%= form.label :host, "FreeFeed Instance", class: "form-label fw-bold" %>
     <%= form.select :host,
       options_for_select(AccessToken.host_options_for_select, host),
       {},
@@ -20,7 +20,7 @@
   </div>
 
   <div class="mb-3">
-    <%= form.label :token, "API Token", class: "form-label" %>
+    <%= form.label :token, "API Token", class: "form-label fw-bold" %>
     <%= form.text_field :token, value: token, class: "form-control", autofocus: true, required: true %>
     <div class="form-text" data-token-host-target="helpText">
       Don't have a token? You may create a new one at <%= link_to host_config[:domain], host_config[:token_url], target: "_blank", data: { token_host_target: "link" } %>.
