--- a/app/views/onboarding/access_tokens/_token_details.html.erb
+++ b/app/views/onboarding/access_tokens/_token_details.html.erb
@@ -11,7 +11,7 @@
   <%= form.hidden_field :owner, value: user_info[:username] %>
 
   <div class="mb-3">
-    <%= form.label :host, "FreeFeed Instance", class: "form-label" %>
+    <%= form.label :host, "FreeFeed Instance", class: "form-label fw-bold" %>
     <%= form.select :host,
       options_for_select(AccessToken.host_options_for_select, host),
       {},
@@ -20,7 +20,7 @@
   </div>
 
   <div class="mb-3">
-    <%= form.label :token, "API Token", class: "form-label" %>
+    <%= form.label :token, "API Token", class: "form-label fw-bold" %>
     <%= form.text_field :token, value: token, class: "form-control", disabled: true %>
   </div>
 
