--- a/app/views/onboarding/access_tokens/_token_details.html.erb
+++ b/app/views/onboarding/access_tokens/_token_details.html.erb
@@ -1,5 +1,5 @@
 <%
-  host ||= AccessToken::FREEFEED_HOSTS["production"][:url]
+  host ||= AccessToken::FREEFEED_HOSTS[:production][:url]
   token ||= ""
   user_info ||= {}
   managed_groups ||= []
