--- a/app/views/onboarding/access_tokens/_token_details.html.erb
+++ b/app/views/onboarding/access_tokens/_token_details.html.erb
@@ -53,7 +53,7 @@
 
   <div class="d-flex gap-3">
     <%= form.submit "Save and continue", class: "btn btn-primary" %>
-    <%= link_to "Use different token", onboarding_access_token_path, class: "btn btn-outline-secondary" %>
+    <%= link_to "Use different token", onboarding_access_token_path, class: "btn btn-outline-secondary", data: { turbo_action: "replace" } %>
     <%= link_to "Back", onboarding_intro_path, class: "btn btn-light" %>
   </div>
 <% end %>
