--- a/app/views/onboarding/access_tokens/_token_details.html.erb
+++ b/app/views/onboarding/access_tokens/_token_details.html.erb
@@ -21,7 +21,7 @@
 
   <div class="mb-3">
     <%= form.label :token, "API Token", class: "form-label fw-bold" %>
-    <%= form.text_field :token, value: token, class: "form-control", disabled: true %>
+    <%= form.password_field :token, value: token, class: "form-control", disabled: true %>
   </div>
 
   <div class="mb-3">
