--- a/app/views/onboarding/access_tokens/_token_details.html.erb
+++ b/app/views/onboarding/access_tokens/_token_details.html.erb
@@ -38,7 +38,11 @@
           <li class="mb-1">
             <%= link_to "@#{group[:username]}", "#{host}/#{group[:username]}", target: "_blank", class: "text-decoration-none" %>
             <%= " (#{group[:screen_name]})" if group[:screen_name].present? && group[:screen_name] != group[:username] %>
-            <%= " (private)" if group[:is_private] %>
+            <% if group[:is_private] %>
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-lock-fill text-muted ms-1" viewBox="0 0 16 16" style="margin-bottom: 2px;">
+                <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2m3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2"/>
+              </svg>
+            <% end %>
           </li>
         <% end %>
       </ul>
