--- a/app/views/settings/access_tokens/edit.html.erb
+++ b/app/views/settings/access_tokens/edit.html.erb
@@ -13,7 +13,7 @@
 
     <%= render "form",
                access_token: @access_token,
-               token_label: "New Freefeed Access Token",
+               token_label: "New FreeFeed Access Token",
                token_placeholder: "Leave empty to keep current token",
                token_value: "",
                submit_text: "Update Token" %>
