--- a/app/views/settings/access_tokens/new.html.erb
+++ b/app/views/settings/access_tokens/new.html.erb
@@ -7,8 +7,8 @@
   <div class="col-lg-6">
     <%= render "form",
                access_token: @access_token,
-               token_label: "Freefeed Access Token",
-               token_placeholder: "Paste your Freefeed access token here",
+               token_label: "FreeFeed Access Token",
+               token_placeholder: "Paste your FreeFeed access token here",
                token_value: @access_token.token,
                submit_text: "Create Token" %>
   </div>
