--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-12">
       <p>
-        Feeder helps you automatically share content from your favorite sources to Freefeed.
+        Feeder helps you automatically share content from your favorite sources to FreeFeed.
       </p>
       <p>
         To get started, you'll need to add a FreeFeed access token so Feeder can post on your behalf.
