--- a/app/views/settings/access_token_groups/index.turbo_stream.erb
+++ b/app/views/settings/access_token_groups/index.turbo_stream.erb
@@ -13,7 +13,7 @@
       <% end %>
     </select>
     <div class="form-text" data-groups-target="helpText">
-      Select the Freefeed group
+      Select the FreeFeed group
       <a href="#" data-action="click->groups#refreshGroups" class="ms-2">Refresh</a>
     </div>
     <div class="invalid-feedback">Select a target group.</div>
