--- a/app/views/settings/access_tokens/_form.html.erb
+++ b/app/views/settings/access_tokens/_form.html.erb
@@ -26,11 +26,11 @@
                           class: "form-control #{'is-invalid' if access_token.errors[:token].any?}",
                           placeholder: token_placeholder,
                           value: token_value %>
-      <div class="form-text">Get a token from your <a href="https://freefeed.net/settings/app-tokens/create?title=Feeder%20App&scopes=manage-posts,manage-groups" target="_blank" data-token-form-target="helpText">Freefeed settings</a></div>
+      <div class="form-text">Get a token from your <a href="https://freefeed.net/settings/app-tokens/create?title=Feeder%20App&scopes=manage-posts,manage-groups" target="_blank" data-token-form-target="helpText">FreeFeed settings</a></div>
     </div>
 
     <div class="mb-4">
-      <%= form.label :host, "Freefeed Instance", class: "form-label fw-bold" %>
+      <%= form.label :host, "FreeFeed Instance", class: "form-label fw-bold" %>
       <div class="mb-2">
         <% AccessToken::FREEFEED_HOSTS.each do |key, config| %>
           <div class="form-check mb-2">
@@ -58,7 +58,7 @@
                             id: "custom_host_input",
                             data: { token_form_target: "customInput", action: "input->token-form#customInputChanged" } %>
       </div>
-      <div class="form-text">Select the Freefeed instance where your token was created</div>
+      <div class="form-text">Select the FreeFeed instance where your token was created</div>
     </div>
 
     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
