--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -93,7 +93,7 @@
   <div class="card">
     <div class="card-body text-center py-5">
       <h5>No access tokens yet</h5>
-      <p class="text-muted mb-4">Add Freefeed API access token to enable content reposting.</p>
+      <p class="text-muted mb-4">Add FreeFeed API access token to enable content reposting.</p>
       <%= link_to "Create New Token", new_settings_access_token_path, class: "btn btn-primary" %>
     </div>
   </div>
