Fix: Prevent rendering error in token_details partial

--- a/app/views/onboarding/access_tokens/_token_details.html.erb
+++ b/app/views/onboarding/access_tokens/_token_details.html.erb
@@ -3,6 +3,7 @@
   token ||= ""
   user_info ||= {}
   managed_groups ||= []
+  validation_error ||= nil
 %>
 
 <%= form_with url: onboarding_access_token_path, method: :post do |form| %>
