--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -31,6 +31,19 @@
             </div>
           </div>
         </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">
+                <%= icon("hdd", css_class: "me-2") %>
+                System Info
+              </h5>
+              <p class="card-text">View disk usage and other system information</p>
+              <%= link_to "View System Info", admin_system_info_path, class: "btn btn-primary" %>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
