--- a/app/views/admin/system_stats/show.html.erb
+++ b/app/views/admin/system_stats/show.html.erb
@@ -1,5 +1,5 @@
-<% content_for :title, "System Info" %>
-<%= page_header "System Info" %>
+<% content_for :title, "System Stats" %>
+<%= page_header "Show System Stats" %>
 
 <div class="row">
   <div class="col-12">
