--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -40,7 +40,7 @@
                 System Info
               </h5>
               <p class="card-text">View disk usage and other system information</p>
-              <%= link_to "View System Info", admin_system_info_path, class: "btn btn-primary" %>
+              <%= link_to "View System Info", admin_system_stats_path, class: "btn btn-primary" %>
             </div>
           </div>
         </div>
